Ajustes al algoritmo, sigue sin funcionar